Fix team issue on small size

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4958,4 +4958,13 @@ input[type="checkbox"].error { box-shadow: 0px 0px 0px 1px rgb(255 0 0), 1px 1px
     #team-page {
         height: 400px;
     }
+    #small-team-page {
+        display: none;
+    }
  }
+ @media (max-width: 991px) { 
+    #team-page {
+       display: none;
+    }
+ }
+ 
